<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewRecipeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/recipe"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:text="@string/recipe_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="5dp"
        android:text="@string/ingredients"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/go_back"
        style="@style/OrangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/edit_photos"
        android:onClick="OnGotoMyRecipes"
        android:text="@string/go_back"
        android:textSize="18sp" />

    <Button
        android:id="@+id/publish_recipe"
        style="@style/GreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_recipe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="OnPublishRecipe"
        android:text="@string/publish_recipe"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit_photos"
        style="@style/BlueButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/publish_recipe"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:onClick="OnEditPhotos"
        android:text="@string/edit_photos"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit_recipe"
        style="@style/BlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_photos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:onClick="OnEditRecipe"
        android:text="@string/edit_recipe"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3" >

    </ListView>

    <Button
        android:id="@+id/email_recipe"
        style="@style/BlueButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_photos"
        android:layout_alignBottom="@+id/edit_photos"
        android:layout_alignParentRight="true"
        android:onClick="OnEmailRecipe"
        android:text="@string/email_recipe"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_recipe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5" />

</RelativeLayout>
